# data_ingestion_tools

./: .gitignore  README.md  fmriprep_upload.py  fmripreproc.py  pyproject.toml
examples/: rise_upload_analysis.ipynb  zip_htmls.py
examples/example_upload_files/.ipynb_checkpoints/: run_script-checkpoint.sh
test_files/fmriprep_derivs/: analysis_configuration.txt  analysis_information.txt  data_tree.txt
test_files/fmriprep_derivs/scripts/: run_script.sh
tests/: data_tree.txt  unit_tests.py
utils/: utils.py
