[tool.poetry]
name = "data_ingestion_tools"
version = "0.0.1"
description = "Tools used to ingest data from remote computers to Flywheel (CU Boulder)"
authors = ["intermountainneuroimaging"]
readme = "README.md"
license = "Other"
keywords = [
    "Flywheel",
    "SDK"
]
repository = ""
classifiers = [
    "Topic :: Scientific/Engineering"
]


[tool.poetry.dependencies]
python = "^3.8"
pybids = "^0.14.0"
pytest-mock-generator = "^1.0.0"
jsonpickle = "^2.0.0"
flywheel-gear-toolkit = {version = "^0.6.0", extras = ["sdk"]}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^20.8b1"
isort = "^5.6.4"
parameterized = "^0.8.1"
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
mypy = "^0.931"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
